# agentbin

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  dist-workspace.toml  fly.toml  release-plz.toml
.claude/skills/ideation/: SKILL.md
.github/workflows/: release-plz.yml  release.yml
.sdd/codebase/: STACK.md
.sdd/memory/: constitution.md
crates/cli/: CHANGELOG.md  Cargo.toml
crates/cli/src/: config.rs  main.rs  output.rs  signing.rs
crates/cli/src/commands/: admin.rs  collection.rs  delete.rs  keygen.rs  list.rs  mod.rs  upload.rs
crates/core/: Cargo.toml
crates/core/src/: auth.rs  error.rs  filetype.rs  lib.rs  metadata.rs  render.rs  slug.rs  storage.rs  uid.rs
crates/server/: CHANGELOG.md  Cargo.toml
crates/server/src/: badge.rs  config.rs  expiry.rs  main.rs  render.rs  state.rs
crates/server/src/middleware/: auth.rs  request_id.rs
crates/server/src/routes/: admin.rs  collection.rs  health.rs  manage.rs  mod.rs  raw.rs  upload.rs  view.rs
crates/server/src/templates/: collection.html  error.html  mod.rs  plain.html  rendered.html
docs/ideas/: 2026-03-04-agentbin-vision.md
specs/001-agentbin-platform/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-agentbin-platform/checklists/: requirements.md
specs/001-agentbin-platform/contracts/: api-spec.md  auth-protocol.md  ci.yml  cli-dist.toml  server-dist.toml
static/: badge.js
