[package]
name = "agentbin-core"
version = "0.1.0"
description = "Shared domain logic for the agentbin file sharing service"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
nanoid = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
comrak = { workspace = true }
syntect = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
