[package]
name = "agentbin-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
askama = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
agentbin-core = { workspace = true }
uuid = { version = "1", features = ["v4"] }
sha2 = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
http = "1"
